Menu page added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="navbar">
     <img class="burger_logo" src="img/Burger_cube.png" alt="logo">
     <ul class="options">
-      <li><h2>Home</h2></li>
-      <li><h2>Menu</h2></li>
+      <li><h2><a href="index.html">Home</a></h2></li>
+      <li><h2><a href="menu.html">Menu</a></h2></li>
       <li><h2>About</h2></li>
       <li><h2>Contact Us</h2></li>
     </ul>
