about descriptions added

--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,7 @@
     </ul>
     <img class ="burgermenu" src="img/hamMenu.png" alt="hamburger menu">
   </div>
-  <img class="title"src="img/sliders.png" alt="title">
-  
+  <!--Location and socials-->
     
    <script src="script.js"></script>
 </body>
