--- a/menu.html
+++ b/menu.html
@@ -13,8 +13,8 @@
     <ul class="options">
        <li><h2><a href="index.html">Home</a></h2></li>
       <li><h2><a href="menu.html">Menu</a></h2></li>
-      <li><h2>About</h2></li>
-      <li><h2>Contact Us</h2></li>
+      <li><h2><a href="about.html">About</a></h2></li>
+      <li><h2><a href="contact.html">Contact Us</a></h2></li>
     </ul>
     <img class ="burgermenu" src="img/hamMenu.png" alt="hamburger menu">
   </div>
@@ -24,9 +24,9 @@
   <br>
   <div class="pricing-wrapper">
       <div class="pricing">
-        <div class="item header">Item</div>
+        <div class="item header"><b>Item</b></div>
         <div class="prices header">
-            <div>Prices</div>
+            <div><b>Prices</b></div>
         </div>
         <div class="item"><img src="img/HamburgSlider.webp" alt="HamSlider"></div>
         <div class="prices">
