ab bout and contact page added

--- a/about.html
+++ b/about.html
@@ -28,11 +28,24 @@ We’re all about bringing people together—whether you’re grabbing a quick b
 
 Fast, fresh, and finger-lickin’ good—that’s our promise. Because life’s too short for boring bites.</p>
       </div>
+      <br>
       <!--img Gallery here-->
+       <div class="Gallery">
+         <div class="arrow1"><a class="prev" onclick="plusSlides(-1)"><h1>&#10094;</h1></a></div>
+          <div class="slide-container">
+            <img class="slide" src="img/Burger_cube_wide.png">
+            <img class="slide" src="img/HamburgSlider_wide.png">
+            <img class="slide" src="img/chickenSlider_wide.png">
+            <img class="slide" src="img/fries_wide.png">
+            <img class="slide" src="img/Chicken_Nuggets_wide.png">
+            <img class="slide" src="img/pop_wide.png">
+          </div>
+          <div class="arrow2"><a class="next" onclick="plusSlides(1)"><h1>&#10095;</h1></a></div>
+       </div>
   </div>
   
   
     
-   <script src="script.js"></script>
+   <script src="about.js"></script>
 </body>
 </html>
