header added for each page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </ul>
     <img class ="burgermenu" src="img/hamMenu.png" alt="hamburger menu">
   </div>
+  <div class="topic"><h1>Home</h1></div>
   <img class="title"src="img/sliders.png" alt="title">
   
     
