--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,8 @@
     <img class ="burgermenu" src="img/hamMenu.png" alt="hamburger menu">
   </div>
   <br>
-  <div class="Topic"><h1>Menu</h1></div>
+
+  <div class="topic"><h1>Menu</h1></div>
   
   <br>
   <div class="pricing-wrapper">
