--- a/about.html
+++ b/about.html
@@ -19,15 +19,16 @@
     <img class ="burgermenu" src="img/hamMenu.png" alt="hamburger menu">
   </div>
   <br>
-  <div class="about">
+  
       <div class="topic">
         <h1>About us</h1>
-        <p class="desc">At Mini Burgers, we believe great flavor comes in small bites. Our passion is creating crave-worthy comfort food in snackable, shareable portions that keep you coming back for more. From juicy sliders and crispy fries to golden nuggets packed with flavor, every bite is made fresh, fast, and full of fun.
+      </div>
+      <p class="desc about">At Mini Burgers, we believe great flavor comes in small bites. Our passion is creating crave-worthy comfort food in snackable, shareable portions that keep you coming back for more. From juicy sliders and crispy fries to golden nuggets packed with flavor, every bite is made fresh, fast, and full of fun.
 
 We’re all about bringing people together—whether you’re grabbing a quick bite on the go, sharing a basket with friends, or indulging in your late-night cravings. Our menu is designed for variety, so you can mix, match, and taste it all without ever settling for just one flavor.
 
 Fast, fresh, and finger-lickin’ good—that’s our promise. Because life’s too short for boring bites.</p>
-      </div>
+      
       <br>
       <!--img Gallery here-->
        <div class="Gallery">
@@ -42,7 +43,7 @@ Fast, fresh, and finger-lickin’ good—that’s our promise. Because life’s 
           </div>
           <div class="arrow2"><a class="next" onclick="plusSlides(1)"><h1>&#10095;</h1></a></div>
        </div>
-  </div>
+  
   
   
     
