--- a/menu.html
+++ b/menu.html
@@ -54,9 +54,9 @@
         </div>
         <div class="item"><img src="img/Chicken_Nuggets.jpg" alt="Chicken_Nuggets"></div>
         <div class="prices">
-            <div>4: $3.99</div>
-            <div>6: $4.99</div>
-            <div>10: $5.99</div>
+            <div>4pc: $3.99</div>
+            <div>6pc: $4.99</div>
+            <div>10pc: $5.99</div>
         </div>
         <div class="item"><img src="img/soda.jpg" alt="soda">></div>
         <div class="prices">
