--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="contact.css">
 
-  <title>Restaurant Project</title>
+  <title>Contact</title>
 </head>
 <body>
   <div class="navbar">
