--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="index.css">
 
-  <title>Restaurant Project</title>
+  <title>Mini Burgers</title>
 </head>
 <body>
   <div class="navbar">
